--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings":{
-      "DefaultConnection":"Data Source=DatingApp.db"
+  "AppSettings": {
+    "Token": "your secret token"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
